chore: use padding to ensure gap always exists for header and footer

--- a/src/client/stylesheets/style.less
+++ b/src/client/stylesheets/style.less
@@ -63,13 +63,13 @@
 @btn-primary-border:             darken(#428bca, 6.5%);
 
 body {
-	margin-top: 64px;
-    margin-bottom: 64px;
+	padding-top: 64px;
+    padding-bottom: 64px;
 }
 
 @media (max-width: 600px) {
     body {
-        margin-bottom: 128px;
+        padding-bottom: 128px;
     }
 }
 
